<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textAlignment="center"
        android:textColor="@color/textcolour"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="235dp"
        app:srcCompat="@drawable/mainimage" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="541dp">

        <Button
            android:id="@+id/btnregister"
            android:layout_width="170dp"
            android:layout_height="54dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="110dp"
            android:hint="@string/register"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnreports"
            android:layout_width="170dp"
            android:layout_height="54dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="100dp"
            android:text="@string/driverReport"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnregister" />

        <Button
            android:id="@+id/btnassign"
            android:layout_width="170dp"
            android:layout_height="54dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="24dp"
            android:text="@string/driverperformance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/btnreports"
            app:layout_constraintTop_toBottomOf="@+id/btnview" />

        <Button
            android:id="@+id/btnview"
            android:layout_width="170dp"
            android:layout_height="54dp"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/login"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/btnregister"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="366dp"
            android:layout_height="170dp"
            android:layout_marginBottom="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/mainimage2" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="171dp"
            android:layout_height="140dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/singledriver" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="165dp"
            android:layout_height="138dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/drivers" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="122dp"
            android:layout_height="116dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:srcCompat="@drawable/report" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="117dp"
            android:layout_height="81dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:srcCompat="@drawable/truck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>